syntax = "proto3";

package lectiongrpc.event.v1;
option go_package = "lectiongrpc/pkg/event/v1";

service EventService { // определение сервиса
  rpc Unary (EventRequest) returns (EventResponse);
  rpc ServerStream (EventRequest) returns (stream EventResponse);
  rpc ClientStream (stream EventRequest) returns (EventResponse);
  rpc BidirectionalStream (stream EventRequest) returns (stream EventResponse);
}

message EventRequest { // запрос
  int64 id = 1;
  string payload = 2;
}

message EventResponse { // ответ
  int64 id = 1;
  string payload = 2;
}

